--- a/styles/main.css
+++ b/styles/main.css
@@ -55,4 +55,13 @@ button:active {
     opacity: 1;
     visibility: visible;
     transform: translateX(-50%) translateY(-8px);
+}
+
+.status-panel,
+.indices-panel,
+.shards-data-panel,
+.search-panel,
+.sample-data-panel,
+.quick-filter-panel {
+    margin-bottom: 1.5rem;
 } 
